--- a/css/style.css
+++ b/css/style.css
@@ -75,24 +75,28 @@
     font-weight: normal;
     border-radius: 0px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
 
+body{
+    font-family:'Roboto Mono', monospace ;
+}
 /*** Navbar ***/
 .navbar-light .navbar-nav .nav-link {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     position: relative;
     margin-right: 25px;
     padding: 35px 0;
     color: #FFFFFF !important;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 400;
     outline: none;
     transition: .5s;
 }
 
 .sticky-top.navbar-light .navbar-nav .nav-link {
-    padding: 20px 0;
-    color: var(--dark) !important;
+    padding: 10px 0;
+    color: var(--secondary) !important;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
@@ -101,7 +105,7 @@
 }
 
 .navbar-light .navbar-brand img {
-    max-height: 60px;
+    max-height: 10px;
     transition: .5s;
 }
 
@@ -172,14 +176,14 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(2, 2, 63, 0.877), rgba(5, 5, 31, 0.911)), url(../img/hand.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
-    color: rgba(255, 255, 255, .5);
+    color: rgba(116, 115, 115, 0.884);
 }
 
 
