--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,21 @@ body{
     font-family:'Roboto Mono', monospace ;
 }
 /*** Navbar ***/
+.navbar-light {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1); /* Increase thickness */
+    background-color: #FFFFFF; /* Set background to white */
+    color: #14141F;
+}
+
+
+
+
 .navbar-light .navbar-nav .nav-link {
     font-family: 'Roboto Mono', monospace;
     position: relative;
     margin-right: 25px;
     padding: 35px 0;
-    color: #FFFFFF !important;
+    color: #030000 !important;
     font-size: 14px;
     font-weight: 400;
     outline: none;
@@ -117,6 +126,11 @@ body{
     .sticky-top.navbar-light {
         position: relative;
         background: #FFFFFF;
+    }
+
+    .sticky-top.navbar-light {
+        border-bottom-color: rgba(0, 0, 0, 0.1); /* Increase thickness for sticky navbar */
+        background-color: #FFFFFF; /* Set background to white for sticky navbar */
     }
 
     .navbar-light .navbar-collapse {
@@ -369,7 +383,7 @@ body{
     margin: 0 5px;
     width: 15px;
     height: 15px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #0a0101;
     border-radius: 15px;
     transition: .5s;
 }
@@ -388,9 +402,9 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--light);
+    color: var(--dark);
     font-weight: normal;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #794a4a;
     border-radius: 35px;
     transition: .3s;
 }
@@ -427,11 +441,12 @@ body{
 .footer .copyright {
     padding: 25px 0;
     font-size: 15px;
-    border-top: 1px solid rgba(256, 256, 256, .1);
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .footer .copyright a {
-    color: var(--light);
+    color: var(--dark);
 }
 
 .footer .footer-menu a {
